--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy" : "ng deploy --base-href=https://NikosBaxevanis.github.io/CF7-Angular/" 
+    "deploy": "ng deploy --base-href=https://NikosBaxevanis.github.io/CF7-Angular/"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.18.0",
     "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.6.0",
