--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+      "jwt-decode": "^4.0.0",
     "bootstrap": "^5.3.5",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
